Issue #22463: Correct #endif placement; patch by Senthil Kumaran